zeit.content.video changes
==========================

2.7.5 (unreleased)
------------------

- Nothing changed yet.


2.7.4 (2017-07-07)
------------------

- ZON-3983: Update to SerieSource API change


2.7.3 (2017-05-22)
------------------

- ZON-3917 remove bigshare button checkbox


2.7.2 (2017-01-18)
------------------

- ZON-3576: Add commentsPremoderate property


2.7.1 (2016-09-29)
------------------

- Hide bigshare buttons.


2.7.0 (2016-09-27)
------------------

- ZON-3278: Allow to share video via social media.

- ZON-3278: Extract computation of SEO slug from zeit.web.


2.6.1 (2016-09-02)
------------------

- Fix brown-bag 2.6.0 that needlessly depended on an unreleased zeit.cms


2.6.0 (2016-09-02)
------------------

- Add ``video_still_copyright`` and ``authorships`` to ``IVideo``. (ZON-2409)


2.5.3 (2016-04-18)
------------------

- Don't load Zope/UI specific ZCML in the model ZCML


2.5.2 (2015-07-24)
------------------

- Use proper serie source for videos (ZON-1464).


2.5.1 (2015-06-25)
------------------

- Remove feature toggle ``zeit.content.cp.automatic`` (DEV-832).


2.5.0 (2015-06-09)
------------------

- Add a duration attribute to video renditions (ZON-1566).

- Add a source for playlists. (DEV-300)


2.4.0 (2015-04-17)
------------------

- Support serie objects for video series, too (ZON-1464).


2.3.3 (2015-04-15)
------------------

- Only automatically publish playlists, not any object referencing a video
  (BUG-235).


2.3.2 (2015-02-20)
------------------

- Enable auto-cp fields on video forms (VIV-654).


2.3.1 (2015-02-16)
------------------

- Register default view properly (BUG-86).


2.3.0 (2015-01-29)
------------------

- Set video duration as rendition property (ZON-1275).


2.2.11 (2015-01-21)
-------------------

- Add subtitle to form (VIV-648).


2.2.10 (2014-12-17)
-------------------

- Update XMLReferenceUpdater API (VIV-629).


2.2.9 (2014-10-21)
------------------
